# LVGLBuilder

./: .gitignore  AssetManager.cpp  AssetManager.h  CLAUDE.md  CMakeLists.txt  CanvasActions.cpp  CanvasActions.h  DragDropHandler.cpp  DragDropHandler.h  LVGLCore.cpp  LVGLCore.h  LVGLDialog.h  LVGLDisplay.cpp  LVGLDisplay.h  LVGLFontData.cpp  LVGLFontData.h  LVGLFontDialog.h  LVGLFontManager.cpp  LVGLFontManager.h  LVGLImageData.h  LVGLImageManager.cpp  LVGLImageManager.h  LVGLItem.cpp  LVGLItem.h  LVGLNewDialog.h  LVGLObject.cpp  LVGLObject.h  LVGLObjectManager.cpp  LVGLObjectManager.h  LVGLObjectModel.h  LVGLProject.cpp  LVGLProject.h  LVGLProperty.h  LVGLPropertyModel.cpp  LVGLPropertyModel.h  LVGLSimulator.cpp  LVGLSimulator.h  LVGLStyle.h  LVGLStyleModel.cpp  LVGLStyleModel.h  (+17 more)
docs/: 00-Overview.md  01-How-to-Build.md  02-Architecture.md  03-How-to-Write-Tests.md  04-How-to-Add-a-Widget.md  05-Source-Layout.md  architecture-audit-report.html  testing-strategy.md
docs/superpowers/plans/: 2026-04-04-architecture-audit-report.md  2026-04-05-doxygen-documentation.md  2026-04-14-tabview-remove-tab.md  2026-04-16-fix-tabview-remove-crash.md  2026-04-16-tabview-remove-bug-fixes.md
docs/superpowers/specs/: 2026-04-04-architecture-audit-report-design.md  2026-04-05-doxygen-documentation-design.md  2026-04-14-tabview-remove-tab-design.md
lvgl/lvgl/src/lv_objx/: lv_tabview.c  lv_tabview.h
properties/: LVGLPropertyAccessible.h  LVGLPropertyAssignTextArea.h  LVGLPropertyBarRange.h  LVGLPropertyBarValue.h  LVGLPropertyBtnState.h  LVGLPropertyButtonLayout.h  LVGLPropertyButtonState.h  LVGLPropertyCBChecked.h  LVGLPropertyCBInactive.h  LVGLPropertyCPickerColor.h  LVGLPropertyCPickerHue.h  LVGLPropertyCPickerMode.h  LVGLPropertyCPickerSaturation.h  LVGLPropertyCPickerType.h  LVGLPropertyCPickerValue.h  LVGLPropertyChartDarking.h  LVGLPropertyChartMargin.h  LVGLPropertyChartOpa.h  LVGLPropertyChartRange.h  LVGLPropertyChartSeries.h  LVGLPropertyChartType.h  LVGLPropertyChartWidth.h  LVGLPropertyChartXDiv.h  LVGLPropertyChartYDiv.h  LVGLPropertyColor.cpp  LVGLPropertyColor.h  LVGLPropertyContainerLayout.h  LVGLPropertyDDListAlign.h  LVGLPropertyDDListAnimationTime.h  LVGLPropertyDDListDrawArrow.h  LVGLPropertyDDListFixedHeight.h  LVGLPropertyDDListFixedWidth.h  LVGLPropertyDDListScrollbars.h  LVGLPropertyDDListStayOpen.h  LVGLPropertyDate.h  LVGLPropertyDateList.cpp  LVGLPropertyDateList.h  LVGLPropertyDayNames.h  LVGLPropertyFlags.cpp  LVGLPropertyFlags.h  (+83 more)
tests/: CMakeLists.txt  tests.pro
tests/tst_assetmanagers/: tst_assetmanagers.cpp
tests/tst_canvasactions/: tst_canvasactions.cpp
tests/tst_codeexport/: tst_codeexport.cpp
tests/tst_lvglcore/: tst_lvglcore.cpp
tests/tst_lvglitem/: tst_lvglitem.cpp
tests/tst_lvglobject/: tst_lvglobject.cpp
tests/tst_lvglproject/: tst_lvglproject.cpp
tests/tst_projectmanager/: tst_projectmanager.cpp
tests/tst_properties/: tst_properties.cpp
tests/tst_recentfilesmanager/: tst_recentfilesmanager.cpp
tests/tst_selectionmanager/: tst_selectionmanager.cpp
tests/tst_tabview_remove/: tst_tabview_remove.cpp  tst_tabview_remove.pro
tests/tst_widgets/: tst_widgets.cpp
widgets/: LVGLArc.h  LVGLBar.cpp  LVGLBar.h  LVGLButton.cpp  LVGLButton.h  LVGLButtonMatrix.cpp  LVGLButtonMatrix.h  LVGLCalendar.cpp  LVGLCalendar.h  LVGLCanvas.cpp  LVGLCanvas.h  LVGLChart.cpp  LVGLChart.h  LVGLCheckBox.cpp  LVGLCheckBox.h  LVGLColorPicker.cpp  LVGLColorPicker.h  LVGLContainer.cpp  LVGLContainer.h  LVGLDropDownList.cpp  LVGLDropDownList.h  LVGLGauge.cpp  LVGLGauge.h  LVGLImage.cpp  LVGLImage.h  LVGLImageButton.cpp  LVGLImageButton.h  LVGLImageSlider.cpp  LVGLImageSlider.h  LVGLKeyboard.cpp  LVGLKeyboard.h  LVGLLED.cpp  LVGLLED.h  LVGLLabel.cpp  LVGLLabel.h  LVGLLine.cpp  LVGLLine.h  LVGLLineMeter.cpp  LVGLLineMeter.h  LVGLList.cpp  (+18 more)
